# raptor

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  raptor.toml  setup.sh
.github/workflows/: build.yml  ci.yml  python-publish.yml
native/: CMakeLists.txt
native/bindings/: Module.cpp  module.cpp
native/include/Raptor/: Raptor.hpp
native/src/: Raptor.cpp
python/raptor/: __init__.py  cli.py  native.pyi
python/raptor/commands/: clean.py  doctor.py  premake.py  rebuild.py  run.py  setup.py
python/raptor/config/: loader.py
python/raptor/core/: environ.py  log.py  msbuild.py  net.py
python/raptor/doctor/: registry.py
python/raptor/doctor/checks/: cpp23.py  dotnet.py  doxygen.py  hooks.py  vulkan.py  vulkan_driver.py  windows.py
python/raptor/hooks/: registry.py
python/raptor/setup/: dotnet.py  doxygen.py  git.py  vulkan.py
scripts/: dev.bat  dev.sh  setup.bat  stubgen.bat  stubgen.sh
src/raptor/: cli.py
src/raptor/commands/: build.py  clean.py  doctor.py  generate.py  hook.py  premake.py  rebuild.py  run.py  setup.py
src/raptor/config/: defines.py  loader.py  structs.py
src/raptor/core/: environ.py  fs.py  git.py  log.py  msbuild.py  net.py  process.py  validation.py
src/raptor/doctor/: registry.py
src/raptor/doctor/checks/: check.py  cpp23.py  dotnet.py  doxygen.py  git.py  git_hooks.py  hooks.py  raptor.py  visualstudio.py  vulkan.py  vulkan_driver.py  windows.py
src/raptor/hooks/: loader.py  registry.py
src/raptor/setup/: dotnet.py  doxygen.py  git.py  hooks.py  vulkan.py
