[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "intricate-raptor"
version = "0.0.1"
description = "Internal developer tooling for the Intricate Engine."
readme = "README.md"
authors = [
    { name = "Intricate Dev Team" }
]
requires-python = ">=3.13"
dependencies = [
    "packaging>=25.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "typer>=0.21.1",
    "urllib3>=2.6.2"
]

[project.scripts]
raptor = "raptor.cli:app"
