[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "intricate-raptor"
version = "0.0.4"
description = "Internal developer tooling for the Intricate Engine."
readme = "README.md"
authors = [
    { name = "Intricate Dev Team" }
]
requires-python = ">=3.13"
dependencies = [
    "packaging>=25.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "typer>=0.21.1",
    "urllib3>=2.6.2"
]

[project.scripts]
raptor = "raptor.cli:app"

[project.urls]
Homepage = "https://github.com/Intricate-Dev-Team/raptor"
Repository = "https://github.com/Intricate-Dev-Team/raptor.git"
Issues = "https://github.com/Intricate-Dev-Team/raptor/issues"

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.package-data]
"intricate-raptor" = ["raptor/bin/premake/**"]
