[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["raptor"]
wheel.py-api = "cp313"

[project]
name = "intrynzic-raptor"
version = "0.0.7"
description = "The developer tooling suite for Intrynzic's projects, automating environment bootstrap, SDK setup, build orchestration and more."
readme = "README.md"
authors = [
    { name = "Intrynzic Software" }
]
requires-python = ">=3.13"
dependencies = [
    "packaging>=25.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "typer>=0.21.1",
    "urllib3>=2.6.2"
]

[project.scripts]
raptor = "raptor.cli:app"

[project.urls]
Homepage = "https://github.com/intrynzic/raptor"
Repository = "https://github.com/intrynzic/raptor.git"
Issues = "https://github.com/intrynzic/raptor/issues"

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.cibuildwheel]
build-frontend = "build[uv]"
build = ["cp313-*"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
repair-wheel-command = ""

[tool.cibuildwheel.windows]
archs = ["AMD64"]
